# English-Learning-Agent

./: .env  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  app.py  english_agent.db  flake8  pyproject.toml  requirements-audio.txt  requirements-dev.txt  requirements.txt  test_api.py  verify_setup.py
.github/workflows/: ci.yml
.streamlit/: config.toml
agents/orchestrator/: master_analytics.py  router.py
agents/quiz/: analytics.py  corrector.py  generator.py  planner.py  validator.py
agents/quiz_tutor/: analytics.py  corrector.py  generator.py  planner.py  validator.py
agents/speaking/: analytics.py  assessor.py  evaluator.py  follow_up.py  generator.py
agents/toefl/: analytics.py  evaluator.py  listening_generator.py  planner.py  reading_generator.py  structure_generator.py  validator.py
agents/vocab/: analytics.py  evaluator.py  generator.py  planner.py  validator.py
config/: cluster_metadata.json  prerequisite_rules.json  settings.py  speaking_metadata.json
database/: connection.py  models.py
database/repositories/: quiz_repository.py  session_repository.py  speaking_repository.py  toefl_repository.py  tutor_repository.py  vocab_repository.py
docker/: .dockerignore  Dockerfile  docker-compose.dev.yml  docker-compose.yml
docs/guides/: adding_materials.md  troubleshooting.md
docs/setup/: configuration.md  (+2 more)
pages/: dashboard.py  quiz.py  speaking.py  toefl.py  vocab.py
scripts/: index_knowledge_base.py  reset_database.py
tests/: conftest.py  test_placeholder.py
utils/: helpers.py  logger.py  retry.py
(+67 files in other folders)
